Refonte du formulaire en cours, commit d'ajout du formulaire réponsE.

--- a/layout/index.phtml
+++ b/layout/index.phtml
@@ -9,6 +9,7 @@
         <link href="css/layout.css" rel="stylesheet" type="text/css" />
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
+        <script type="text/javascript" src="js/plugin.js"></script>
     </head>
     <body id="page">
         <div class="tail-top-right"></div>
